fix: fix mathjax text overflowing

--- a/src/index.scss
+++ b/src/index.scss
@@ -428,3 +428,7 @@ header {
   height: 24px;
   width: 24px;
 }
+
+.MJX-TEX {
+  white-space: normal;
+}
